--- a/Cpp/makefile
+++ b/Cpp/makefile
@@ -3,12 +3,12 @@
 #   Copyright (c) 2014 Chase Johnson
 # ========================================== 
 
-#
+PROJECT_DIR = ../
 TARGET_BASE = HelloWorld
 
 #COMPILIER = gcc
 COMPILER = g++
-OUTPUT_DIRECTORY = -o bin/
+OUTPUT_DIRECTORY = -o $(PROJECT_DIR)/bin/
 
 ifeq ($(OS),Windows_NT)
 	TARGET_EXTENSION=.exe
@@ -26,10 +26,10 @@ TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
 
 
 #SOURCE FILES
-SOURCE_FILES=src/HelloWorld.cpp
+SOURCE_FILES=$(PROJECT_DIR)src/main/HelloWorld.cpp
 
 
-CLEANUP = rm -f ../build/* ; rm -f $(TARGET) ; mkdir -p ../build
+CLEANUP = rm -f $(PROJECT_DIR)/build/* ; rm -f $(TARGET) ; mkdir -p $(PROJECT_DIR)/build
 
 #Check for windows otherwise assume OSX (Darwin) or posix
 #ifeq ($(OS),Windows_NT)
@@ -43,7 +43,7 @@ all: clean default
 default:
 	$(info *** Default Action - Building Project ***)
 	$(COMPILER) $(INC_DIRS) $(SYMBOLS) $(SOURCE_FILES) $(OUTPUT_DIRECTORY)$(TARGET)
-	./bin/$(TARGET)
+	$(PROJECT_DIR)/bin/$(TARGET)
 	
 
 clean:
