--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ proguard/
 # Java class files
 *.class
 
+# ----------------- C/C++ files ----------------------
+*.exe
+
 
 # generated files
 bin/
