Update to C/Cpp sublime projects. Fixed issue with base directory. Updated makefiles.

--- a/Cpp/makefile
+++ b/Cpp/makefile
@@ -3,7 +3,7 @@
 #   Copyright (c) 2014 Chase Johnson
 # ========================================== 
 
-PROJECT_DIR = ../
+PROJECT_DIR = ..
 TARGET_BASE = HelloWorld
 
 #COMPILIER = gcc
@@ -14,6 +14,7 @@ ifeq ($(OS),Windows_NT)
 	TARGET_EXTENSION=.exe
 else
 	TARGET_EXTENSION=.out
+	CLEANUP = rm -f $(PROJECT_DIR)/bin/* ; rm -f $(TARGET) ; mkdir -p $(PROJECT_DIR)/bin
 endif
 TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
 
@@ -26,10 +27,8 @@ TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
 
 
 #SOURCE FILES
-SOURCE_FILES=$(PROJECT_DIR)src/main/HelloWorld.cpp
+SOURCE_FILES=$(PROJECT_DIR)/src/main/HelloWorld.cpp
 
-
-CLEANUP = rm -f $(PROJECT_DIR)/build/* ; rm -f $(TARGET) ; mkdir -p $(PROJECT_DIR)/build
 
 #Check for windows otherwise assume OSX (Darwin) or posix
 #ifeq ($(OS),Windows_NT)
