--- a/EmbeddedC/makefile
+++ b/EmbeddedC/makefile
@@ -3,18 +3,20 @@
 #   Copyright (c) 2014 Chase Johnson
 # ========================================== 
 
-#
+PROJECT_DIR = ..
 TARGET_BASE = HelloWorld
 
-#COMPILIER = gcc
-COMPILER = g++
+COMPILER = gcc
+OUTPUT_DIRECTORY = -o $(PROJECT_DIR)/bin/
+
 ifeq ($(OS),Windows_NT)
 	TARGET_EXTENSION=.exe
 else
 	TARGET_EXTENSION=.out
+	CLEANUP = rm -f $(PROJECT_DIR)/bin/* ; rm -f $(TARGET) ; mkdir -p $(PROJECT_DIR)/bin
 endif
 TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
-OUTPUT=-o $(TARGET)
+
 
 #INCLUDE FILES
 
@@ -24,11 +26,8 @@ OUTPUT=-o $(TARGET)
 
 
 #SOURCE FILES
-SRC_FILES=src/unity.c
+SOURCE_FILES=$(PROJECT_DIR)/src/main/HelloWorld.c
 
-
-
-CLEANUP = rm -f ../build/* ; rm -f $(TARGET) ; mkdir -p ../build
 
 #Check for windows otherwise assume OSX (Darwin) or posix
 #ifeq ($(OS),Windows_NT)
@@ -41,8 +40,8 @@ all: clean default
 
 default:
 	$(info *** Default Action - Building Project ***)
-	$(COMPILER) $(INC_DIRS) $(SYMBOLS) $(SRC_FILES) $(OUT_FILE)
-	./$(TARGET)
+	$(COMPILER) $(INC_DIRS) $(SYMBOLS) $(SOURCE_FILES) $(OUTPUT_DIRECTORY)$(TARGET)
+	$(PROJECT_DIR)/bin/$(TARGET)
 	
 
 clean:
